--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,20 @@
 app = "flowise-me"
 primary_region = "ewr"
 
+[http_service]
+auto_start_machines = true
+auto_stop_machines = true
+force_https = true
+internal_port = 3_000
+min_machines_running = 0
+processes = [ "app" ]
+
+[[vm]]
+cpu_kind = "shared"
+cpus = 1
+memory = "1gb"
+memory_mb = 1_024
+
 [env]
   FLOWISE_USERNAME = "admin"
   FLOWISE_PASSWORD = "3Tomazeli9$"
