--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@ primary_region = "ewr"
 
 [http_service]
 auto_start_machines = true
-auto_stop_machines = true
+auto_stop_machines = false
 force_https = true
 internal_port = 3_000
 min_machines_running = 0
