--- a/fly.toml
+++ b/fly.toml
@@ -5,7 +5,7 @@ primary_region = "ewr"
 auto_start_machines = true
 auto_stop_machines = false
 force_https = true
-internal_port = 3_000
+internal_port = 3000
 min_machines_running = 0
 processes = [ "app" ]
 
@@ -13,16 +13,16 @@ processes = [ "app" ]
 cpu_kind = "shared"
 cpus = 1
 memory = "1gb"
-memory_mb = 1_024
+memory_mb = 1024
 
 [env]
   FLOWISE_USERNAME = "admin"
   FLOWISE_PASSWORD = "3Tomazeli9$"
-  BLOB_STORAGE_PATH = "/data"
-  DATABASE_PATH    = "/data"
-  SECRETKEY_PATH   = "/data"
-  APIKEY_PATH      = "/data"
+  BLOB_STORAGE_PATH = "/root/.flowise/data"
+  DATABASE_PATH    = "/root/.flowise/flowise.db"
+  SECRETKEY_PATH   = "/root/.flowise/data"
+  APIKEY_PATH      = "/root/.flowise/data"
 
 [[mounts]]
   source = "flowise_data"
-  destination = "/data"
+  destination = "/root/.flowise"
